# sovereign-architect

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: entropy.rs  lagrangian.rs  mod.rs
src/network/: ingestion.rs
src/proofs/: prover.rs
src/simulation/: monte_carlo.rs
