[package]
name = "olo-core"
version = "0.1.0"
edition = "2021"
authors = ["AxiomHive <architect@axiomhive.network>"]

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Math & Physics
ndarray = "0.15"
statrs = "0.16" # Statistical distributions

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12" # Protocol Buffers

# Cryptography & ZK
halo2_proofs = "0.3" # The ZK backend
poseidon = "0.1"     # Hashing

# Networking
libp2p = "0.52"
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"

# Parallel Processing
rayon = "1.7"

# Random Number Generation
rand = "0.8"
rand_distr = "0.4"
